@@ -38,6 +38,8 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 497455  Update drd/scripts/download-and-build-gcc
 497723  Enabling Ada demangling breaks callgrind differentiation between
         overloaded functions and procedures
+498317  FdBadUse is not a valid CoreError type in a suppression
+        even though it's generated by --gen-suppressions=yes
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
